--- a/app/src/main/res/layout/activity_watch.xml
+++ b/app/src/main/res/layout/activity_watch.xml
@@ -8,6 +8,7 @@
     <androidx.media3.ui.PlayerView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:controller_layout_id="@layout/tes_controller" />
 
 </FrameLayout>
