--- a/app/src/main/res/layout/activity_watch_exo.xml
+++ b/app/src/main/res/layout/activity_watch_exo.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- Created by KoinWorks (M. Faisal Amir) on . -->
+<!-- Created by (M. Faisal Amir) on . -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
