--- a/app/src/main/res/layout/custom_player_view_controller.xml
+++ b/app/src/main/res/layout/custom_player_view_controller.xml
@@ -68,17 +68,9 @@
                 android:id="@id/exo_settings"
                 style="@style/ExoStyledControls.Button.Bottom.Settings" />
 
-            <ImageButton android:id="@+id/exo_fullscreen_icon"
-                style="@style/ExoStyledControls.Button.Bottom.FullScreen"/>
-
-<!--            <ImageButton-->
-<!--                android:id="@+id/exo_fullscreen_icon"-->
-<!--                android:layout_width="@dimen/exo_small_icon_width"-->
-<!--                android:layout_height="@dimen/exo_small_icon_height"-->
-<!--                android:layout_marginLeft="@dimen/exo_small_icon_horizontal_margin"-->
-<!--                android:layout_marginRight="@dimen/exo_small_icon_horizontal_margin"-->
-<!--                android:paddingTop="@dimen/exo_small_icon_padding_vertical"-->
-<!--                android:paddingBottom="@dimen/exo_small_icon_padding_vertical"/>-->
+            <ImageButton
+                android:id="@+id/exo_fullscreen_icon"
+                style="@style/ExoStyledControls.Button.Bottom.FullScreen" />
 
         </LinearLayout>
 
